--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -101,15 +101,81 @@
         <div class="marvel_who_we_are">
           <h3>Who we are</h3>
           <p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
-          <!--button-->
+          <form class="form-main-button">
+                  <button type="submit">More Info</button>
+                  <button type="submit">Join Expreance</button>
+          </form>
         </div>
       </div>
       <div class="fourth_content">
         <div class="features_page">
           <h2>Features</h2>
           <h4>We're creative crafting with love</h4>
-          <div class="fourth_content_blocks"></div>
-          <!--*9* fourth_similar_block  -->
+          <div class="fourth_content_blocks">
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-unlock-alt"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Powerful Security</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-lightbulb"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Creative ideas</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-cog"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Poverfull admin panel</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-microphone"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>High resolution theme</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-glasses"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Awesome interface</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-location-arrow"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Untimade website builder</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-laptop"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Responsive theme</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="far fa-bell"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Custom content blocks</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+                  <div class="fourth_similar_block">
+                    <div class="fourth_similar_block_circle"><i class="fas fa-camera"></i></div>
+                    <div class="fourth_similar_block_text">
+                      <h6>Trendy design</h6>
+                      <p>Lorem ipsum dolor sicon adipiscing elit. Etiam anferme ntubero eget rorem interdum.</p>
+                    </div>
+                  </div>
+          </div>
         </div>
       </div>
       <div class="fifth_content">
