--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -183,11 +183,111 @@
           <h2>Work</h2>
           <h4>Our portfolio</h4>
           <div class="work_page_buttons">
-            <!--button + icon-->
+            <form class="form-block-button"><i class="fas fa-th"></i>
+                    <button type="submit">Business</button>
+                    <button type="submit">Corporate</button>
+                    <button type="submit">Branding</button>
+                    <button type="submit">Photography</button>
+            </form>
           </div>
         </div>
         <div class="fifth_photos_block">
-          <!--*8* container_to_photos_block-->
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_1.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_2.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_3.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_4.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_5.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_6.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_7.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="container_to_photos_block"><img class="people photo" src="../img/fifth_photos_8.png" alt="people photo">
+                  <div class="text_hover_to_photos_block">
+                    <div class="icons_to_photo_block">
+                      <div class="icon_circle"><i class="fas fa-link"></i></div>
+                      <div class="icon_circle"><i class="fas fa-search"></i></div>
+                    </div>
+                    <div class="text_to_photo_block">
+                      <h6>Fullwidth Slideshow</h6>
+                      <p> - Fasion</p>
+                    </div>
+                  </div>
+                </div>
         </div>
       </div>
       <div class="sixth_background">
@@ -196,7 +296,22 @@
             <h2>Service</h2>
             <h4>Clean idea and unique design</h4>
             <div class="service_page_content">
-              <!--*4* service_page_content_block-->
+                    <div class="service_page_content_block"><a href="#"><i class="fas fa-cog"></i></a>
+                      <h6>Excellent features</h6>
+                      <p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+                    </div>
+                    <div class="service_page_content_block"><a href="#"><i class="fas fa-camera"></i></a>
+                      <h6>Simple &amp; Clean</h6>
+                      <p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+                    </div>
+                    <div class="service_page_content_block"><a href="#"><i class="fas fa-briefcase"></i></a>
+                      <h6>Parallax Effect</h6>
+                      <p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+                    </div>
+                    <div class="service_page_content_block"><a href="#"><i class="far fa-bell"></i></a>
+                      <h6>24/7 Support</h6>
+                      <p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+                    </div>
             </div>
           </div>
         </div>
