--- a/Marvel-With-Gulp/src/views/sections/service_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/service_page.pug
@@ -4,4 +4,7 @@ div.sixth_background
       h2 Service
       h4 Clean idea and unique design
       div.service_page_content
-        //*4* service_page_content_block
+        +sixth_service_page_content_block('fas fa-cog','Excellent features','Lorem ipsum doloar sit amet meconstur adipiscing.')
+        +sixth_service_page_content_block('fas fa-camera','Simple & Clean','Lorem ipsum doloar sit amet meconstur adipiscing.')
+        +sixth_service_page_content_block('fas fa-briefcase','Parallax Effect','Lorem ipsum doloar sit amet meconstur adipiscing.')
+        +sixth_service_page_content_block('far fa-bell','24/7 Support','Lorem ipsum doloar sit amet meconstur adipiscing.')
