--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -321,7 +321,81 @@
           <h2>Pricing</h2>
           <h4>Choose your plan</h4>
           <div class="seven_price_blocks">
-            <!--*3* seventh_price_block-->
+                  <div class="price_block">
+                    <div class="top_content_price_block">
+                      <h6>Standart</h6>
+                      <div class="price_per_month">
+                        <p>$</p>
+                        <p></p>
+                        <p>/ MONTH</p>
+                      </div>
+                      <p>15 day free trial on all accounts  </p>
+                    </div>
+                    <div class="main_content_price_block">
+                      <p>&amp;gt; 100 Pages Websites </p>
+                      <p>&amp;gt; Sell 1 Product &amp; Accept Donatiors </p>
+                      <p>&amp;gt; Developer Platform </p>
+                      <p>&amp;gt; 20 Pages Galleries </p>
+                      <p>&amp;gt; 120 GB Cloud Storage </p>
+                      <p>- </p>
+                      <p>-</p>
+                    </div>
+                    <div class="bottom_content_price_block">
+                      <form class="form-price_bottom-button">
+                        <button type="submit">Get Started Now   </button>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="price_block">
+                    <div class="top_content_price_block">
+                      <h6>Premium</h6>
+                      <div class="price_per_month">
+                        <p>$</p>
+                        <p></p>
+                        <p>/ MONTH</p>
+                      </div>
+                      <p>15 day free trial on all accounts  </p>
+                    </div>
+                    <div class="main_content_price_block">
+                      <p>&amp;gt; 10 Pages Websites </p>
+                      <p>&amp;gt; Sell 1 Product &amp; Accept Donatiors </p>
+                      <p>&amp;gt; Developer Platform </p>
+                      <p>&amp;gt; 20 Pages Galleries </p>
+                      <p>&amp;gt; 120 GB Cloud Storage </p>
+                      <p>&amp;gt; Mobile Website and Store </p>
+                      <p>-</p>
+                    </div>
+                    <div class="bottom_content_price_block">
+                      <form class="form-price_bottom-button">
+                        <button type="submit">Get Started Now   </button>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="price_block">
+                    <div class="top_content_price_block">
+                      <h6>Ultimate</h6>
+                      <div class="price_per_month">
+                        <p>$</p>
+                        <p></p>
+                        <p>/ MONTH</p>
+                      </div>
+                      <p>15 day free trial on all accounts  </p>
+                    </div>
+                    <div class="main_content_price_block">
+                      <p>&amp;gt; 10 Pages Websites </p>
+                      <p>&amp;gt; Sell 1 Product &amp; Accept Donatiors </p>
+                      <p>&amp;gt; Developer Platform </p>
+                      <p>&amp;gt; 20 Pages Galleries </p>
+                      <p>&amp;gt; 120 GB Cloud Storage </p>
+                      <p>&amp;gt; Mobile Website and Store </p>
+                      <p>&amp;gt; 24/7 Support</p>
+                    </div>
+                    <div class="bottom_content_price_block">
+                      <form class="form-price_bottom-button">
+                        <button type="submit">Get Started Now   </button>
+                      </form>
+                    </div>
+                  </div>
           </div>
         </div>
       </div>
@@ -330,7 +404,36 @@
           <h2>Expert </h2>
           <h4>Meet Team </h4>
           <div class="expert_content_blocks">
-            <!-- *3* expert_block-->
+                  <div class="expert_block"><img class="expert_photo" src="../img/expert-first.png" alt="expert photo">
+                    <div class="text_about_expert">
+                      <h5>Robert Willsom</h5>
+                      <hr>
+                      <h6>Web developer</h6>
+                      <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+                      <hr>
+                      <div class="social_icons"><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple"></i></a></div>
+                    </div>
+                  </div>
+                  <div class="expert_block"><img class="expert_photo" src="../img/expert-second.png" alt="expert photo">
+                    <div class="text_about_expert">
+                      <h5>Robert Willsom</h5>
+                      <hr>
+                      <h6>Web developer</h6>
+                      <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+                      <hr>
+                      <div class="social_icons"><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple"></i></a></div>
+                    </div>
+                  </div>
+                  <div class="expert_block"><img class="expert_photo" src="../img/expert-first.png" alt="expert photo">
+                    <div class="text_about_expert">
+                      <h5>Robert Willsom</h5>
+                      <hr>
+                      <h6>Web developer</h6>
+                      <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+                      <hr>
+                      <div class="social_icons"><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple"></i></a></div>
+                    </div>
+                  </div>
           </div>
         </div>
       </div>
@@ -338,7 +441,10 @@
         <div class="impressed_by_our_work">
           <h3>Are you impressed by our work?</h3>
           <p>Durabitur commodo ras non urna mauris mollis auctor proin laoreet</p>
-          <!--button-->
+          <form class="form-main-button">
+                  <button type="submit">Purchase Now</button>
+                  <button type="submit">Get in Touch</button>
+          </form>
         </div>
       </div>
       <div class="eleven_content">
