--- a/Marvel-With-Gulp/src/views/components/mixins.pug
+++ b/Marvel-With-Gulp/src/views/components/mixins.pug
@@ -47,7 +47,8 @@ mixin seventh_price_block(seventh_kind_service, eventh_price_number,seventh_achi
       p #{seventh_achive_6} 
       p #{seventh_achive_7}
     div.bottom_content_price_block
-      // button    
+      form.form-price_bottom-button
+        button(type="submit") Get Started Now   
     
 mixin eight_expert_block(eight_expert_photo, eight_h5, eight_h6, eight_p  )
   div.expert_block
