--- a/Marvel-With-Gulp/src/views/sections/pricing_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/pricing_page.pug
@@ -1,6 +1,9 @@
+include ../components/mixins
 div.seventh_content
   div.pricing_page
     h2 Pricing
     h4 Choose your plan
     div.seven_price_blocks
-      //*3* seventh_price_block
+      +seventh_price_block('Standart','107','&gt; 100 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','-','-')
+      +seventh_price_block('Premium','433','&gt; 10 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','&gt; Mobile Website and Store','-')
+      +seventh_price_block('Ultimate','1233','&gt; 10 Pages Websites ','&gt; Sell 1 Product & Accept Donatiors','&gt; Developer Platform','&gt; 20 Pages Galleries','&gt; 120 GB Cloud Storage','&gt; Mobile Website and Store','&gt; 24/7 Support')
