--- a/Marvel-With-Gulp/src/views/components/seventh_price_block.pug
+++ b/Marvel-With-Gulp/src/views/components/seventh_price_block.pug
@@ -1,5 +1,7 @@
 mixin seventh_price_block(seventh_kind_service, eventh_price_number,seventh_achive_1, seventh_achive_2, seventh_achive_3, seventh_achive_4, seventh_achive_5, seventh_achive_6, seventh_achive_7)
   div.price_block
+    div.grey_top_price_block
+      p Most Popular
     div.top_content_price_block
       h6 #{seventh_kind_service}
       div.price_per_month
@@ -15,7 +17,6 @@ mixin seventh_price_block(seventh_kind_service, eventh_price_number,seventh_achi
       p #{seventh_achive_5} 
       p #{seventh_achive_6} 
       p #{seventh_achive_7}
-    div.bottom_content_price_block
-      // button   
+  
       
       
