--- a/Marvel-With-Gulp/src/views/sections/expert_page.pug
+++ b/Marvel-With-Gulp/src/views/sections/expert_page.pug
@@ -1,6 +1,9 @@
+include ../components/mixins
 div.eight_content
   div.expert_page
     h2 Expert 
     h4 Meet Team 
     div.expert_content_blocks
-      // *3* expert_block
+      +eight_expert_block('../img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
+      +eight_expert_block('../img/expert-second.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')
+      +eight_expert_block('../img/expert-first.png','Robert Willsom','Web developer','Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.')    
