--- a/Marvel-With-Gulp/src/views/sections/impressed_by_our_work.pug
+++ b/Marvel-With-Gulp/src/views/sections/impressed_by_our_work.pug
@@ -1,5 +1,8 @@
+include ../components/mixins
 div.ninth_content
   div.impressed_by_our_work
     h3 Are you impressed by our work?
     p Durabitur commodo ras non urna mauris mollis auctor proin laoreet
-    //button
+    form.form-main-button
+      +main_button('Purchase Now')
+      +main_button('Get in Touch')
