Full_Pug_Kommit

--- a/Marvel-With-Gulp/src/views/index.pug
+++ b/Marvel-With-Gulp/src/views/index.pug
@@ -1,29 +1,18 @@
 extends templates/main
-
+include ../views/components/mixins
 
 block content
   include ../views/sections/page_about
-  
   include ../views/sections/responsive_page
-  
   include ../views/sections/who_we_are
-  
   include ../views/sections/features_page
-    
   include ../views/sections/work_page
-  
   include ../views/sections/service_page
-  
   include ../views/sections/pricing_page
-
   include ../views/sections/expert_page  
-  
   include ../views/sections/impressed_by_our_work
-  
-    include ../views/sections/news_page  
-  
+  include ../views/sections/news_page  
   include ../views/sections/contact_page  
-  
-  
+  include ../views/sections/footer 
   
   
