--- a/Marvel-With-Gulp/dest/views/index.html
+++ b/Marvel-With-Gulp/dest/views/index.html
@@ -45,8 +45,8 @@
           <h4>This is the one page polo</h4>
           <p>Molestie iltricies quam. Donec at sem. Prasent pretium. Maorbi quis nulla venicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore manga aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat</p>
           <form class="form-main-button">
-                  <button type="submit">More Info</button>
-                  <button type="submit">Join Expreance</button>
+                <button type="submit">More Info</button>
+                <button type="submit">Join Expreance</button>
           </form>
         </div>
         <div class="first_content_text_block">
@@ -444,16 +444,91 @@
           <form class="form-main-button">
                   <button type="submit">Purchase Now</button>
                   <button type="submit">Get in Touch</button>
-            <div class="tenth_content">
-              <div class="news_page">
-                <h2>News </h2>
-                <h4>Reicent blog post </h4>
-              </div>
-              <div class="news_photo_block">
-                <!--*4* news block -->
-              </div>
-            </div>
           </form>
+        </div>
+      </div>
+      <div class="tenth_content">
+        <div class="news_page">
+          <h2>News </h2>
+          <h4>Reicent blog post </h4>
+        </div>
+        <div class="news_photo_block">
+                <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-first.png" alt="news photo">
+                  <div class="hover_photo-news">
+                    <div class="left_hover_photo-news">
+                      <p>&lt;</p>
+                    </div>
+                    <div class="right_hover_photo-news">
+                      <p>&gt;   </p>
+                    </div>
+                  </div>
+                  <div class="grey_block_under_news_photo">
+                    <p>23 JULY 2015 </p>
+                  </div>
+                  <h6></h6>
+                  <div class="text_to_ten_block">
+                    <p>By Admin . In Logo . 1 Comment</p>
+                    <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+                  </div>
+                  <div class="link_ten_block"><a href="#">READ MORE </a></div>
+                </div>
+                <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-second.png" alt="news photo">
+                  <div class="hover_photo-news">
+                    <div class="left_hover_photo-news">
+                      <p>&lt;</p>
+                    </div>
+                    <div class="right_hover_photo-news">
+                      <p>&gt;   </p>
+                    </div>
+                  </div>
+                  <div class="grey_block_under_news_photo">
+                    <p>23 JULY 2015 </p>
+                  </div>
+                  <h6></h6>
+                  <div class="text_to_ten_block">
+                    <p>By Admin . In Logo . 1 Comment</p>
+                    <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+                  </div>
+                  <div class="link_ten_block"><a href="#">READ MORE </a></div>
+                </div>
+                <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-third.png" alt="news photo">
+                  <div class="hover_photo-news">
+                    <div class="left_hover_photo-news">
+                      <p>&lt;</p>
+                    </div>
+                    <div class="right_hover_photo-news">
+                      <p>&gt;   </p>
+                    </div>
+                  </div>
+                  <div class="grey_block_under_news_photo">
+                    <p>23 JULY 2015 </p>
+                  </div>
+                  <h6></h6>
+                  <div class="text_to_ten_block">
+                    <p>By Admin . In Logo . 1 Comment</p>
+                    <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+                  </div>
+                  <div class="link_ten_block"><a href="#">READ MORE </a></div>
+                </div>
+                <div class="similar_news_photo_block"><img class="news_photo" src="../img/news-fourth.png" alt="news photo">
+                  <div class="hover_photo-news">
+                    <div class="left_hover_photo-news">
+                      <p>&lt;</p>
+                    </div>
+                    <div class="right_hover_photo-news">
+                      <p>&gt;   </p>
+                    </div>
+                  </div>
+                  <div class="grey_block_under_news_photo">
+                    <p>23 JULY 2015 </p>
+                  </div>
+                  <h6></h6>
+                  <div class="text_to_ten_block">
+                    <p>By Admin . In Logo . 1 Comment</p>
+                    <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+                  </div>
+                  <div class="link_ten_block"><a href="#">READ MORE </a></div>
+                </div>
         </div>
       </div>
       <div class="eleven_content">
@@ -472,9 +547,35 @@
               </div>
               <div class="massage">
                 <textarea placeholder="Type your message"></textarea>
-                <!-- button-->
+                <form class="form-main-button">
+                        <button type="submit">SEND</button>
+                </form>
               </div>
             </section>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer_map_bacground">
+          <div class="footer_map">
+            <p>Locate us on map &or;</p>
+          </div>
+        </div>
+        <div class="main_content_footer_background">
+          <div class="main_content_footer">
+            <div class="flang_content_footer">
+              <div class="footer_circle"><i class="fas fa-mobile-alt"></i></div><a href="tel:(999) 000-122-233">Phone :(999) 000-122-233  </a>
+            </div>
+            <div class="footer_social_icons"><a href="#"><i class="fab fa-twitter"> </i></a><a href="#"><i class="fab fa-linkedin"></i></a><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-skype"></i></a><a href="#"><i class="fab fa-pinterest"></i></a><a href="#"><i class="fab fa-apple">  </i></a></div>
+            <div class="flang_content_footer">
+              <div class="footer_circle"><i class="fas fa-globe"> </i></div>
+              <p>123 stoke, South America, 205  </p>
+            </div>
+          </div>
+        </div>
+        <div class="bottom_footer_bacground">
+          <div class="bottom_footer">
+            <p>All Rights Reserved &copy; Themexpert 2016        </p>
           </div>
         </div>
       </div>
