--- a/Marvel-With-Gulp/src/sass/index.scss
+++ b/Marvel-With-Gulp/src/sass/index.scss
@@ -1,16 +1,68 @@
-@import "one";
-@import "two";
+$font-article: Montserrat, sans-serif;
+$font-basic: Muli, sans-serif;
+$font-lato: Lato, sans-serif;
+$font-poppins: Poppins, sans-serif;
+$max-width: 1140px;
+$color_for_h1: #444444;
+$color_for_main_text: #878787;
+$color_for_menu_block: #2A2A2A;
+$color_for_yellow: #FFE400;
+$color_for_grey_h2: #E8E8E8;
+$color_for_black: #212121;
+$color_for_dark_grey: #757575;
 
-.users {
-  display: flex;
-  justify-content: space-around;
+      /*  General Style   */
+*{box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+h2{
+  color: $color_for_grey_h2;
+  font: 91px $font-article;
+  text-transform: uppercase;
+  font-weight: bolder;
+  padding-top: 70px;
+}
+
+h3{
+  font: 44px $font-article;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #FFF;
+  padding-top: 255px;
+}
+
+h4{
+  color: $color_for_h1;
+  font: 28px $font-basic;
+  text-transform: uppercase;
+  margin-top: -52px;
+  margin-bottom: 20px
+}
+
+.form-main-button button{
+  font: 18px $font-article;
+  padding: 20px 0px;
+  border: 1px solid $color_for_h1;
+  font-weight: bolder;
+}
+
+p{
+  font: 16px $font-basic;
 }
 
 
-.users{
 
-
-
-
-
-}
+@import "header";
+@import "page_about";
+@import "contact_page";
+@import "expert_page";
+@import "features_page";
+@import "impressed_by_our_work";
+@import "news_page";
+@import "who_we_are";
+@import "pricing_page";
+@import "responsive_page";
+@import "service_page";
+@import "work_page";
+@import "footer";
